--- a/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.css
+++ b/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.css
@@ -9,9 +9,10 @@ body {
 
 .footer {
   position: absolute;
-  width: 100%;
   bottom: 0;
   height: 50px;
+  width: 100%;
+  margin-right: 10px;
 }
 
 /*==== HELPER STYLES ====*/
