--- a/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.css
+++ b/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.css
@@ -1,43 +1,44 @@
-html {
-  min-height: 100%;
-  position: relative;
-}
-
-body {
-  margin-bottom: 50px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  height: 50px;
-  width: 100%;
-  margin-right: 10px;
-}
-
-/*==== HELPER STYLES ====*/
+/* ==== GENERAL STYLES ==== */
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-body {
-  background: #cfcfcf;
+footer {
+	background: url('https://orange.codeberryschool.com/content/images/project-assets/simple-footer.png') repeat center;
+	display: table;
+	width: 100vw;
+	height: 8rem;
+	text-align: center;
+	padding: 1rem;
+	font-family: 'Arial', sans-serif;
+	font-size: .875rem;
 }
 
-.content,
-.footer {
-  padding: 10px;
-  color: rgba(255,255,255, .9);
-  font-family: monospace;
-  font-size: 1.125rem;
+.wrapper {
+	display: table-cell;
+	vertical-align: middle;
 }
 
-.content {
-  background: #ae001d;
-  height: 200px;
+footer small {
+	color: #ccc;
+	letter-spacing: .025rem;
+	margin-bottom: 1.5rem;
+	display: block;
 }
 
-.footer {
-  background: #193a6a;
+footer-nav a {
+	text-decoration: none;
+	color: #c74f78;
+	margin: 0 .5rem;
+	display: inline-block;
+}
+
+footer-nav a: hover {
+	color: #f26896;
+	transition: color .15s ease-in-out;
+}
+
+strong {
+	font-weight: 700;
 }
