--- a/footers/02_sticky_footer/02_sticky_footer.css
+++ b/footers/02_sticky_footer/02_sticky_footer.css
@@ -1,44 +1,9 @@
-/*=== FOOTER STYLES ====*/
-
-.wrapper {
-	min-height: 100vh;
+html{
+	min-height: 100%;
 	position: relative;
-	padding-bottom: 50px; /* Equals height of the footer and pushes away the content in the case they would touch. */
-}
-
-.footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100vw;
-	height: 50px;
-}
-
-/* ==== HELPER STYLES ==== */
-
-* {
-	box-sizing: border-box;
 }
 
 body {
-	background: #cfcfcf;
+	margin-bottom: 50px;
 }
 
-.content,
-.footer {
-	padding: 10px;
-	color: rgba(255,255,255, .9);
-	font-family: monospace;
-	font-size: 1.125rem;
-}
-
-.content {
-	background: #ae001d;
-	min-height: 300px;
-	height: calc(100vh-20vh);
-}
-
-.footer {
-	background: #193a6a;
-	height: 20vh;
-}
